# liangqin-pricing-skill

./: .gitignore  README.md
docs/: github-release-notes-next.md  github-release-workflow.md  openclaw-installer-prompts.md  (+9 more)
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/.github/: PULL_REQUEST_TEMPLATE.md
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/.github/ISSUE_TEMPLATE/: bug-report.yml
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/.github/workflows/: ci.yml
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/agents/: openai.yaml
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/apps/contract-review/: README.md
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/apps/contract-review/cli/: manual_batch.py
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/docs/: github-publish.md  install.md  release-checklist.md
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/examples/batch-demo/: manifest.example.json
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/references/: batch-folder-spec.md  dependency-contract.md  output-spec.md
docs/contract-review/public-release-kit/liangqin-contract-pricing-audit/scripts/: check_dependencies.sh  run_contract_pricing_audit.sh
(+357 files in other folders)
